# yanga

./: .all-contributorsrc  .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bootstrap.json  bootstrap.ps1  bootstrap.py  build_exe.ps1  build_exe.spec  example_platform_with_west.yaml  example_variant_with_west.yaml  pypeline.yaml  pyproject.toml  scoopfile.json  setup.py  yanga-core-extraction.md  yanga.ps1
.agent/skills/documenting-python-package/: SKILL.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release_exe.yml
docs/: bibliography.rst  conf.py  index.md  index.rst  installation.rst  project_info.rst  refs.bib  usage.rst
docs/_static/: custom.css
docs/about/: index.md
docs/brainstorming/: index.rst
docs/brainstorming/figures/: artifacts.mmd
docs/design/: build_system_generator.rst  index.rst
docs/design/_figures/: design.mmd
docs/design/cmd_line/: index.rst
docs/design/commands/: index.rst  init.rst
docs/design/configuration/: index.rst
docs/design/logging/: index.rst
docs/design/spl/: index.rst
docs/design/spl/variant/: index.rst
docs/explanation/: concepts.md  index.md
docs/explanation/enhancements/: index.md  yep-001-generic-config-files.md  yep-002-poks-package-manager.md
docs/features/: cli.md  cmake.md  configuration.md  index.md  pipeline.md  platform.md  product.md
docs/getting_started/: concepts.md  hello_yanga.md  index.md
docs/how-to/: add-component-tests.md  configure-dependencies.md  create-variant.md  index.md
docs/internals/: index.md
docs/internals/brainstorming/: index.md
docs/internals/brainstorming/figures/: artifacts.mmd
docs/internals/commands/: index.md
docs/reference/: cli.md  cmake.md  configuration.md  index.md  pipeline.md  platform.md  product.md
docs/tutorials/: hello_yanga.md  index.md
docs/use_cases/: index.rst
src/yanga/: __run.py  __run_cmd.py  _yrun.py  extra_module.py  ini.py  yanga.py  ybuild.py  yide.py  yinit.py  ylog.py  ymain.py  yrun.py  yview.py
src/yanga/cmake/: artifacts_locator.py  builder.py  clean.py  cmake_backend.py  config.py  coverage.py  cpp_check.py  cppcheck.py  create_executable.py  generator.py  gtest.py  objects_deps.py  reports.py  runner.py  steps.py  targets.py  targets_data.py  variant_config.py
src/yanga/cmake_generators/: builder.py  cmake_backend.py  create_executable.py  gtest.py
src/yanga/commands/: __main__.py  base.py  build.py  cppcheck_report.py  filter_compile_commands.py  fix_html_links.py  gcovr.py  gui.py  init.py  install.py  report_config.py  reports.py  run.py  targets.py
src/yanga/commands/project-mini/: main.c  yanga.yaml
src/yanga/commands/project-template/: cookiecutter.json
src/yanga/commands/project-template/{{ cookiecutter.project_dir_name }}/: build.ps1  build.py  cmake.ps1  install.yaml  pyproject.toml  yanga.yaml
src/yanga/commands/project-templates/max/: cmake.ps1  yanga.yaml
src/yanga/commands/project-templates/mini/: KConfig  config_de.txt  greeter.h  main.c  yanga.yaml
src/yanga/commands/project-templates/template/: bootstrap.j2.ps1  bootstrap.j2.py  cookiecutter.json
src/yanga/commands/project_templates/max/: CMakeLists.txt  yanga.yaml
src/yanga/commands/project_templates/max/src/low_pass_filter/: yanga.yaml
src/yanga/commands/project_templates/max/src/state_machine/: yanga.yaml
src/yanga/commands/project_templates/max/src/state_machine/src/: state_machine.c
src/yanga/commands/project_templates/mini/: CMakeLists.txt  yanga.yaml
src/yanga/commands/project_templates/template/{{ cookiecutter.project_dir_name }}/: pyproject.toml
src/yanga/core/: cmd_line.py  exceptions.py  logging.py  runnable.py  scoop_wrapper.py  subprocess.py
src/yanga/docs/: sphinx.py  traceability_utils.py
src/yanga/domain/: artifact.py  artifacts.py  component_analyzer.py  components.py  config.py  config_slurper.py  config_utils.py  execution_context.py  pipeline.py  project_slurper.py  reports.py  spl_paths.py  targets.py
src/yanga/gui/: __init__.py  icons.py  ygui.py
src/yanga/kickstart/: create.py
src/yanga/kickstart/templates/common/: .gitignore  CMakeLists.txt  bootstrap.json  bootstrap.ps1  build.ps1  cleanup.ps1  conf.py  index.md  pyproject.toml  scoopfile.json  yanga.yaml
src/yanga/kickstart/templates/common/.devcontainer/: devcontainer.json
src/yanga/project/: config.py  config_slurper.py  project.py  project_slurper.py
src/yanga/spl/: variant.py
src/yanga/steps/: create_venv.py  execute_build.py  kconfig_gen.py  poks_install.py  scoop_install.py  scoop_install_base.py  west_install.py
src/yanga/ybuild/: build_main.py  components.py  config.py  config_slurper.py  environment.py  include_directories_provider.py  pipeline.py  project.py  stages.py  variant.py
src/yanga/ybuild/backends/: builder.py  cmake.py  generated_file.py
src/yanga/ybuild/generators/: build_system.py  build_system_request.py
src/yanga/yrun/: pipeline.py
tests/: conftest.py  test_bootstrap.py  test_buld_system.py  test_chainmap.py  test_cmake.py  test_cmake_artifact_locator.py  test_cmake_backend.py  test_cmake_builder.py  test_cmake_builder_config.py  test_cmake_clean.py  test_cmake_config.py  test_cmake_cppcheck.py  test_cmake_create_executable.py  test_cmake_gtest.py  test_cmake_objects_deps.py  test_cmake_reports.py  test_cmake_steps.py  test_cmake_targets_data.py  test_cmd_line.py  test_component_aliases.py  test_config_file.py  test_config_slurper.py  test_config_utils.py  test_cppcheck_report.py  test_file_slurper.py  test_fix_html_links.py  test_include_directories_resolver.py  test_info_command.py  test_ini.py  test_logger.py  test_pipeline.py  test_poks_install.py  test_project_builder.py  test_project_slurper.py  test_run_pristine.py  test_runnable.py  test_scoop_install.py  test_scoop_install_base.py  test_scoop_wrapper.py  test_subprocess.py  (+16 more)
tests/data/: sample_cppcheck_input.c  sample_cppcheck_output.xml  sample_targets_data.json
(+40 files in other folders)
