[project]
name = "yanga"
version = "2.4.1"
description = "Yet another ninja generator to build C/CPP projects."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "cuinixam", email = "me@cuinixam.me"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "mashumaro<4.0,>=3.5",
    "loguru<1.0,>=0.7",
    "cookiecutter<3.0,>=2.1",
    "py-app-dev<3.0,>=2.5",
    "customtkinter<6.0,>=5.2",
    "pillow<11.0,>=10.1",
    "kspl<2.0,>=1.0",
    "pick<3.0,>=2.2",
    "typer<1.0,>=0.12",
    "hammocking<1.0,>=0.2",
    "pypeline-runner<2.0,>=1.0"
]

[project.urls]
"Bug Tracker" = "https://github.com/cuinixam/yanga/issues"
Changelog = "https://github.com/cuinixam/yanga/blob/main/CHANGELOG.md"
repository = "https://github.com/cuinixam/yanga"
documentation = "https://yanga.readthedocs.io"

[project.scripts]
yanga = "yanga.ymain:main"

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "yanga", from = "src" },
]

[dependency-groups]
dev = [
  "pytest<9.0,>=8.3",
  "pytest-cov<7.0,>=6.0",
  "pypeline-runner>=1,<2",
  "pre-commit<5.0,>=4.0",
  "ruff<1.0,>=0.9",
  "wrapt",
  "pyinstaller<7.0,>=6.11",
  # docs
  "myst-parser>=4.0,<5",
  "sphinx>=8.0,<9",
  "sphinxcontrib-mermaid>=1.0,<2",
  "mlx-traceability>=11.0,<12",
  "sphinx-copybutton>=0,<1",
  "sphinx-new-tab-link>=0,<1",
  "sphinx-book-theme>=1.1,<2",
  "sphinx-design>=0,<1"
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py39"
line-length = 180
lint.select = [
  "B",   # flake8-bugbear
  "D",   # flake8-docstrings
  "C4",  # flake8-comprehensions
  "S",   # flake8-bandit
  "F",   # pyflake
  "E",   # pycodestyle
  "W",   # pycodestyle
  "UP",  # pyupgrade
  "I",   # isort
  "RUF", # ruff specific
]
lint.ignore = [
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D106", # Missing docstring in public nested class
  "D107", # Missing docstring in `__init__`
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."bootstrap.py" = [ "UP006", "UP035", "S603", "D200", "D205", "D417" ]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]


[tool.pytest.ini_options]
addopts = "-vv -Wdefault --cov=yanga --cov-report=term-missing:skip-covered --cov-branch -s"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
]


[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
    'template/**'
]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "bootstrap.*"
ignore_errors = true

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
    "src/yanga/__init__.py:__version__",
    "docs/conf.py:release",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*''',
  '''Initial [Cc]ommit.*''', # codespell:ignore
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true

[tool.codespell]
skip = "build_exe.spec"

