[project]
name = "hello-yanga"
version = "0.0.1"
description = "A simple generated Yanga project to get you started"
authors = [
  { name = "Your Name" },
]

requires-python = "<4.0,>=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "py-app-dev>=2,<3",
  "sphinx-book-theme>=1.1,<2",
  "sphinx-copybutton>=0,<1",
  "sphinx-design>=0,<1",
  "sphinx-new-tab-link>=0,<1",
  "sphinx-rtd-size>=0.2,<1",
  "sphinxcontrib-mermaid>=1,<2",
  "west>=1,<2",
  # Added because UV needs it as explicit dependency. It might be a bug in UV
  "wrapt>=1,<2",
  "yanga>=2,<3",
]
