[project]
name = "hello-yanga"
version = "0.0.1"
description = "A simple generated Yanga project to get you started"
authors = [
  { name = "Your Name" },
]

requires-python = "<4.0,>=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "py-app-dev>=2,<3",
  "sphinx-copybutton>=0,<1",
  "sphinx-design>=0,<1",
  "sphinx-needs>=2,<3",
  "sphinx-new-tab-link>=0,<1",
  "sphinx-rtd-size>=0.2,<1",
  "sphinx-rtd-theme>=3,<4",
  "sphinxcontrib-mermaid>=1,<2",
  "sphinxcontrib-plantuml>=0.29,<1",
  "west>=1,<2",
  "yanga>=2,<3",
]

[tool.poetry]
package-mode = false
