[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
description = "{{ cookiecutter.project_description }}"
authors = ["Your Name"]
package-mode = false

[tool.poetry.dependencies]
python = ">={{ cookiecutter.python_version }},<3.13"
yanga = "^2.1"
py-app-dev = "^2.5"
west = "*"
